--- a/package.json
+++ b/package.json
@@ -40,5 +40,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "prettier": "^3.5.3",
+    "sass": "^1.88.0",
+    "typescript-eslint": "^8.32.1",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
