--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
